--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <LI>INTERESTS:
         <LI>MUSIC</LI>
         <LI>DANCING</LI>
+        <li>COOKING</li>
     </LI>
     <LI>ADDITIONAL ITEMS:
         <LI>CRAFT WORK</LI>
